# firm

./: .gitignore  README.md  data.py  evaluate_multiclass.py  evaluate_oneclass.py  losses.py  main.py  models.py  pyproject.toml  requirements.txt  transforms.py  util.py
docs/: firm.html  index.html  search.js
firm/: __init__.py  loss.py
scripts/: cifar10.sh  cifar100.sh  fmnist.sh
tests/: test_loss_masks.py
