[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firm"
version = "0.1.0"
description = "Focused In-distribution Representation Modeling loss function"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Willian T. Lunardi", email = "willian.lunardi@tii.ae" }
]
dependencies = [
  "torch>=1.9"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=8.2"]